[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"] # avoid exposing weird symbols (functions are exposed with their own names)

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

[profile.stage-1]
inherits = "release"
opt-level = "s"


[dependencies]

